--- a/app TRANSPORTES_TUMBES_2025/app TRANSPORTES_TUMBES_2025.vbproj
+++ b/app TRANSPORTES_TUMBES_2025/app TRANSPORTES_TUMBES_2025.vbproj
@@ -78,6 +78,12 @@
     <Compile Include="INICIO_SESION.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LOGIN_PRINCIPAL\BOLETO_COMPRA.Designer.vb">
+      <DependentUpon>BOLETO_COMPRA.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LOGIN_PRINCIPAL\BOLETO_COMPRA.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LOGIN_PRINCIPAL\LOGIN.Designer.vb">
       <DependentUpon>LOGIN.vb</DependentUpon>
     </Compile>
@@ -88,6 +94,12 @@
       <DependentUpon>FORMULARIO_VENTAS.vb</DependentUpon>
     </Compile>
     <Compile Include="LOGIN_PRINCIPAL\FORMULARIO_VENTAS.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LOGIN_PRINCIPAL\mantenimiento_cliente.Designer.vb">
+      <DependentUpon>mantenimiento_cliente.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LOGIN_PRINCIPAL\mantenimiento_cliente.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -128,11 +140,17 @@
     <EmbeddedResource Include="INICIO_SESION.resx">
       <DependentUpon>INICIO_SESION.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LOGIN_PRINCIPAL\BOLETO_COMPRA.resx">
+      <DependentUpon>BOLETO_COMPRA.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LOGIN_PRINCIPAL\LOGIN.resx">
       <DependentUpon>LOGIN.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LOGIN_PRINCIPAL\FORMULARIO_VENTAS.resx">
       <DependentUpon>FORMULARIO_VENTAS.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LOGIN_PRINCIPAL\mantenimiento_cliente.resx">
+      <DependentUpon>mantenimiento_cliente.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
